--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My Pet</title>
   </head>
   <body>
